syntax = "proto3";

package msg;

import "gogo.proto";

option(gogoproto.goproto_getters_all) = false;

// ============================================================================
// msgid range for C <-> GS: [5300, 5400)
// ============================================================================

import "c_gs.00.structs.proto";

// ============================================================================

// 装备更新
message GS_ArmorUpdate_HeroSeq { // msgid: 5300
    int64 Seq     = 1;           // 装备 seq
    int32 Id      = 2;           // 装备 id
    int64 HeroSeq = 3;
}

// ============================================================================
// 快捷兑换
message C_ItemExchange { // msgid: 5310
    int32 Id = 1;
    int32 N  = 2;
}

message GS_ItemExchange_R { // msgid: 5311
    int32   ErrorCode = 1;
    Rewards Rewards   = 2;
}

// 使用
message C_ItemUse { // msgid: 5320
    int32 Id = 1;
    int32 N  = 2;
}

message GS_ItemUse_R { // msgid: 5321
    int32   ErrorCode = 1;
    Rewards Rewards   = 2;
}

// 穿装备
message C_ArmorEquip { // msgid: 5322
    int64 HeroSeq = 1; // 目标英雄
    int32 Id      = 2; // 要穿戴装备的 id
}

message GS_ArmorEquip_R { // msgid: 5323
    int32 ErrorCode = 1;
}

// 卸装备
message C_ArmorUnequip { // msgid: 5324
    int64 HeroSeq = 1;   // 目标英雄
    int32 Slot    = 2;   // 要卸载装备的槽位
}

message GS_ArmorUnequip_R { // msgid: 5325
    int32 ErrorCode = 1;
}

// 一键穿
message C_ArmorEquipOnekey {    // msgid: 5326
    int64          HeroSeq = 1; // 目标英雄
    repeated int32 Ids     = 2; // 要穿戴装备的 ids
}

message GS_ArmorEquipOnekey_R { // msgid: 5327
    int32 ErrorCode = 1;
}

// 一键卸
message C_ArmorUnequipOnekey { // msgid: 5328
    int64 HeroSeq = 1;         // 目标英雄
}

message GS_ArmorUnequipOnekey_R { // msgid: 5329
    int32 ErrorCode = 1;
}

// 装备合成 (3 合 1)
message C_ArmorCompose { // msgid: 5330
    int32 SrcId = 1;     // 原材料
    int32 N     = 2;     // 合成个数
}

message GS_ArmorCompose_R { // msgid: 5331
    int32   ErrorCode = 1;
    Rewards Rewards   = 2;
}

// 一键装备合成 (3 合 1 到顶)
message C_ArmorComposeOnekey { // msgid: 5332
    int32 SrcId = 1;           // 初始原材料
}

message GS_ArmorComposeOnekey_R { // msgid: 5333
    int32   ErrorCode = 1;
    Rewards Rewards   = 2;
}

// 选择
message C_ItemChoose { // msgid: 5334
    int32             Id  = 1;
    map<int32, int32> Idx = 2;
}

message GS_ItemChoose_R { // msgid: 5335
    int32   ErrorCode = 1;
    Rewards Rewards   = 2;
}
